@@ -18,7 +18,9 @@ import ee.carlrobert.llm.client.http.exchange.StreamHttpExchange;
 import ee.carlrobert.llm.client.openai.completion.ErrorDetails;
 import ee.carlrobert.llm.client.openai.completion.request.OpenAIChatCompletionMessage;
 import ee.carlrobert.llm.client.openai.completion.request.OpenAIChatCompletionRequest;
+import ee.carlrobert.llm.client.openai.completion.request.OpenAIMessageTextContent;
 import ee.carlrobert.llm.completion.CompletionEventListener;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import okhttp3.sse.EventSource;
@@ -52,7 +54,8 @@ class AzureClientTest extends BaseTest {
               500,
               0.1,
               0.1,
-              List.of(Map.of("role", "user", "content", prompt)));
+              List.of(Map.of("role", "user", "content",
+                      Collections.singletonList(Map.of("type", "text", "text", prompt)))));
       return List.of(
           jsonMapResponse("choices", jsonArray(jsonMap("delta", jsonMap("role", "assistant")))),
           jsonMapResponse("choices", jsonArray(jsonMap("delta", jsonMap("content", "Hello")))),
@@ -60,12 +63,17 @@ class AzureClientTest extends BaseTest {
     });
 
     new AzureClient.Builder("TEST_API_KEY",
-        new AzureCompletionRequestParams("TEST_RESOURCE", "TEST_DEPLOYMENT_ID", "TEST_API_VERSION"))
+        new AzureCompletionRequestParams(
+                "TEST_RESOURCE",
+                "TEST_DEPLOYMENT_ID",
+                "TEST_API_VERSION"))
         .setActiveDirectoryAuthentication(true)
         .build()
         .getChatCompletionAsync(
             new OpenAIChatCompletionRequest.Builder(
-                List.of(new OpenAIChatCompletionMessage("user", prompt)))
+                List.of(new OpenAIChatCompletionMessage(
+                        "user",
+                        new OpenAIMessageTextContent(prompt))))
                 .setMaxTokens(500)
                 .setTemperature(0.5)
                 .setPresencePenalty(0.1)
@@ -109,7 +117,8 @@ class AzureClientTest extends BaseTest {
               500,
               0.1,
               0.1,
-              List.of(Map.of("role", "user", "content", prompt)));
+              List.of(Map.of("role", "user", "content",
+                      Collections.singletonList(Map.of("type", "text", "text", prompt)))));
       return new ResponseEntity(new ObjectMapper().writeValueAsString(
           Map.of("choices", List.of(Map.of("message", Map.of(
               "role", "assistant",
@@ -122,7 +131,7 @@ class AzureClientTest extends BaseTest {
         .setActiveDirectoryAuthentication(true)
         .build()
         .getChatCompletion(new OpenAIChatCompletionRequest.Builder(
-            List.of(new OpenAIChatCompletionMessage("user", prompt)))
+            List.of(new OpenAIChatCompletionMessage("user", new OpenAIMessageTextContent(prompt))))
             .setMaxTokens(500)
             .setTemperature(0.5)
             .setPresencePenalty(0.1)
@@ -163,7 +172,8 @@ class AzureClientTest extends BaseTest {
               500,
               0.1,
               0.1,
-              List.of(Map.of("role", "user", "content", prompt)));
+              List.of(Map.of("role", "user", "content",
+                      Collections.singletonList(Map.of("type", "text", "text", prompt)))));
       return List.of(
           jsonMapResponse("choices", jsonArray(jsonMap("delta", jsonMap("role", "assistant")))),
           jsonMapResponse("choices", jsonArray(jsonMap("delta", jsonMap("content", "Hello")))),
@@ -171,12 +181,17 @@ class AzureClientTest extends BaseTest {
     });
 
     new AzureClient.Builder("TEST_API_KEY",
-        new AzureCompletionRequestParams("TEST_RESOURCE", "TEST_DEPLOYMENT_ID", "TEST_API_VERSION"))
+        new AzureCompletionRequestParams(
+                "TEST_RESOURCE",
+                "TEST_DEPLOYMENT_ID",
+                "TEST_API_VERSION"))
         .setActiveDirectoryAuthentication(true)
         .build()
         .getChatCompletionAsync(
             new OpenAIChatCompletionRequest.Builder(
-                List.of(new OpenAIChatCompletionMessage("user", prompt)))
+                List.of(new OpenAIChatCompletionMessage(
+                        "user",
+                        new OpenAIMessageTextContent(prompt))))
                 .setMaxTokens(500)
                 .setTemperature(0.5)
                 .setPresencePenalty(0.1)
@@ -211,11 +226,16 @@ class AzureClientTest extends BaseTest {
     });
 
     new AzureClient.Builder("TEST_API_KEY",
-        new AzureCompletionRequestParams("TEST_RESOURCE", "TEST_DEPLOYMENT_ID", "TEST_API_VERSION"))
+        new AzureCompletionRequestParams(
+                "TEST_RESOURCE",
+                "TEST_DEPLOYMENT_ID",
+                "TEST_API_VERSION"))
         .build()
         .getChatCompletionAsync(
             new OpenAIChatCompletionRequest.Builder(
-                List.of(new OpenAIChatCompletionMessage("user", "TEST_PROMPT")))
+                List.of(new OpenAIChatCompletionMessage(
+                        "user",
+                        new OpenAIMessageTextContent("TEST_PROMPT"))))
                 .build(),
             new CompletionEventListener<String>() {
               @Override
@@ -240,11 +260,16 @@ class AzureClientTest extends BaseTest {
     });
 
     new AzureClient.Builder("TEST_API_KEY",
-        new AzureCompletionRequestParams("TEST_RESOURCE", "TEST_DEPLOYMENT_ID", "TEST_API_VERSION"))
+        new AzureCompletionRequestParams(
+                "TEST_RESOURCE",
+                "TEST_DEPLOYMENT_ID",
+                "TEST_API_VERSION"))
         .build()
         .getChatCompletionAsync(
             new OpenAIChatCompletionRequest.Builder(
-                List.of(new OpenAIChatCompletionMessage("user", "TEST_PROMPT")))
+                List.of(new OpenAIChatCompletionMessage(
+                        "user",
+                        new OpenAIMessageTextContent("TEST_PROMPT"))))
                 .build(),
             new CompletionEventListener<String>() {
               @Override
